infra/k8s/client-depl.yaml
# ------------------------------ Deployment ------------------------------ #
apiVersion: apps/v1
kind: Deployment
metadata:                       # Deployment name
  name: client-depl
spec:
  replicas: 1                   # Copies of the image to run
  selector:                     # Setup selector to tell deployment how to find all of the pods it will create
    matchLabels:
      app: client
  template:                     # How to create each individual pod
    metadata:
      labels:
        app: client
    spec:                       # Container specifications (How the pod behaves)
      containers:
        - name: client            # Container name (for logging purposes)
          image: zjayers/client   # Container Image
