infra/k8s/tickets-depl.yaml
# ------------------------------ Deployment ------------------------------ #
apiVersion: apps/v1
kind: Deployment
metadata:                       # Deployment name
  name: tickets-depl
spec:
  replicas: 1                   # Copies of the image to run
  selector:                     # Setup selector to tell deployment how to find all of the pods it will create
    matchLabels:
      app: tickets
  template:                     # How to create each individual pod
    metadata:
      labels:
        app: tickets
    spec:                       # Container specifications (How the pod behaves)
      containers:
        - name: tickets            # Container name (for logging purposes)
          image: zjayers/tickets   # Container Image
