infra/k8s/tickets-mongo-depl.yaml
# ------------------------------ Deployment ------------------------------ #
apiVersion: apps/v1
kind: Deployment
metadata:                       # Deployment name
  name: tickets-mongo-depl
spec:
  replicas: 1                   # Copies of the image to run
  selector:                     # Setup selector to tell deployment how to find all of the pods it will create
    matchLabels:
      app: tickets-mongo
  template:                     # How to create each individual pod
    metadata:
      labels:
        app: tickets-mongo
    spec:                       # Container specifications (How the pod behaves)
      containers:
        - name: tickets-mongo      # Container name (for logging purposes)
          image: mongo          # Container Image
